Avoid instantiating Short objects; call Short.valueOf() instead.
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/vfs/trunk@1403384 13f79535-47bb-0310-9956-ffa450edef68